# mandarin-ebook-flashcards

./: .gitignore  .pre-commit-config.yaml  README.md  create_test_epub.py  main.py  pyproject.toml  pytest.ini  requirements.txt
src/: ebook_reader.py  file_saver.py  flashcard.py  flashcard_generator.py  main.py  pinyin.py  prompt.yaml  system_prompt.toml  system_prompt.txt  utils.py  word_splitter.py
src/ebook_flashcards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tests/: test_book.epub  test_main.py
tests/: conftest.py  test_all.py  test_batching.py  test_ebook_for_integration.txt  test_ebook_reader.py  test_file_saver.py  test_flashcard.py  test_flashcard_generator.py  test_integration.py  test_main.py  test_pinyin.py  test_shuffling.py  test_utils.py  test_word_splitter.py
