[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-flashcards"
version = "0.1.0"
dependencies = [
    "ebooklib",
    "jieba",
    "litellm",
    "litellm[proxy]",
    "pandas",
    "pytest",
    "beautifulsoup4",
    "pyyaml",
    "python-dotenv",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
